--- a/src/components/header/header.pug
+++ b/src/components/header/header.pug
@@ -51,9 +51,9 @@ mixin header(options = {})
             p.page-header__user-name= options.userName
           else
             .page-header__auth-btn-wrap
-              +button({ title: "Войти", path: "/auth.html", isEmptyStyle: true })
+              +button({ title: "Войти", path: "/auth.html", variant: "outlined" })
             .page-header__registr-btn-wrap
-              +button({ title: "Зарегистрироваться", path: "/registration.html", isMoreLetterSpacing: true })
+              +button({ title: "Зарегистрироваться", path: "/registration.html" })
             ul(id=authListId class="page-header__auth-list")
               li.page-header__auth-item
                 a(class="page-header__auth-item-link" href="/auth.html")= "Войти"
