--- a/src/components/bullet-list/bullet-list.scss
+++ b/src/components/bullet-list/bullet-list.scss
@@ -8,11 +8,11 @@
   font-style: normal;
   text-transform: uppercase;
 
-  &_lp {
+  &_gap_left {
     padding-left: 20px;
   }
 
-  &_big-title {
+  &_size_large {
     margin-bottom: 20px;
     font-size: 18px;
     text-transform: capitalize;
