--- a/src/page/room-details/room-details.pug
+++ b/src/page/room-details/room-details.pug
@@ -73,8 +73,8 @@ block content
           .room-details__column
             +bullet({
               title: "Правила",
-              isBigTitle: true,
-              isTitleLeftPadding: true,
+              titleSize: "large",
+              titleGap: "leftGap",
               items: [
                 { label: "Нельзя с питомцами" },
                 { label: "Без вечеринок и мероприятий" },
