использую компонент typography в colors-and-types

--- a/src/page/colors-and-type/colors-and-type.pug
+++ b/src/page/colors-and-type/colors-and-type.pug
@@ -1,6 +1,6 @@
 extends ../../layout/ui-kit.pug
 include ../../components/color-pallete/color-pallete
-include ../../components/typograph/typograph
+include ../../components/typography/typography
 
 block variables
   -
@@ -51,30 +51,38 @@ block content
           +colorPallete({ title: "Purple", descr: "#BC9CFF", colorPallete: "#BC9CFF" })
         li.colors-and-type__pallete-li  
           +colorPallete({ title: "Green", descr: "#6FCF97", colorPallete: "#6FCF97" })
-      ul.colors-and-type__typograph
-        li.colors-and-type__typograph-li
-          +typograph({
-            title: "This one is the sub-section or widget title",
-            label: "H1",
-          })
-        li.colors-and-type__typograph-li
-          +typograph({
-            title: "Next one is the item title inside widgets",
-            titleModif: "h2",
-            label: "H2",
-            labelModif: "h2"
-          })
-        li.colors-and-type__typograph-li
-          +typograph({
-            title: "This is a label or CTA text",
-            titleModif: "h3",
-            label: "H3",
-            labelModif: "h3"
-          })
-        li.colors-and-type__typograph-li
-          +typograph({
-              text: "This is the body text which is used for most of the design, like paragraphs, lists, etc.",
-              label: "Body",
-              labelModif: "text",
-              isTinyText: true
+      div.colors-and-type__typography-wrap
+        div.colors-and-type__typography-item
+          .colors-and-type__label-wrap
+            p(class="colors-and-type__label colors-and-type__label_upper colors-and-type__label_size_large") h1
+          .colors-and-type__typography-item-wrap
+            +typography({
+              text: 'This one is the sub-section or widget title',
+              variant: 'h1',
+            })
+        div.colors-and-type__typography-item
+          .colors-and-type__label-wrap
+            p(class="colors-and-type__label colors-and-type__label_upper colors-and-type__label_size_medium") h2
+          .colors-and-type__typography-item-wrap
+            +typography({
+              text: 'Next one is the item title inside widgets',
+              variant: 'h2',
+            })
+        div.colors-and-type__typography-item
+          .colors-and-type__label-wrap
+            p(class="colors-and-type__label colors-and-type__label_upper colors-and-type__label_size_low") h3
+          .colors-and-type__typography-item-wrap
+            +typography({
+              text: 'This is a label or cta text',
+              variant: 'h3',
+              hasUpper: true,
+            })
+        div.colors-and-type__typography-item
+          .colors-and-type__label-wrap
+            p.colors-and-type__label Body
+          .colors-and-type__typography-item-wrap
+            +typography({
+              text:
+                'This is the body text which is used for most of the design, like paragraphs, lists, etc.',
+              variant: 'body',
             })
