--- a/src/components/typography/typography.pug
+++ b/src/components/typography/typography.pug
@@ -10,12 +10,12 @@ mixin typography({ text, variant, hasUpper })
     if (hasUpper) {
       typographyClass += " typography_upper";
     }
-  
-  if variant === "h1"
-    h1(class=typographyClass)= text
-  if variant === "h2"
-    h2(class=typographyClass)= text
-  if variant === "h3"
-    h3(class=typographyClass)= text
-  if variant === "body"
-    p(class=typographyClass)= text
+
+    const variantTag = {
+      "h1": "h1",
+      "h2": "h2",
+      "h3": "h3",
+      "body": "p"
+    }
+    
+  #{variantTag[variant]}(class=typographyClass)= text
