--- a/src/components/footer/footer.pug
+++ b/src/components/footer/footer.pug
@@ -38,9 +38,7 @@ include ../social-buttons/social-buttons
 mixin footer(options = {})
   -
     const logoId = options.logoId ? options.logoId : "footer-logo";
-    const emailInputPlaceholder = options.emailInputPlaceholder
-      ? options.emailInputPlaceholder
-      : "Email";
+    const emailInputPlaceholder = "Email";
 
     let footerClass = "page-footer";
 
