--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -160,6 +160,10 @@
   }
 }
 
+.page-footer__title-wrap {
+  margin-bottom: 20px;
+}
+
 .page-footer__text-content-wrap {
   margin-bottom: 23px;
   width: 260px;
