--- a/src/components/nav-menu/nav-menu.pug
+++ b/src/components/nav-menu/nav-menu.pug
@@ -1,9 +1,6 @@
 mixin navMenu(navItem)
-  section.nav-menu
-    .nav-menu__wrap
-      if navItem.title
-        h2.nav-menu__title= navItem.title
-      ul.nav-menu__list
-        each item in navItem.list
-          li.nav-menu__item
-            a(class="nav-menu__link" href=item.path)= item.label
+  .nav-menu
+    ul.nav-menu__list
+      each item in navItem.list
+        li.nav-menu__item
+          a(class="nav-menu__link" href=item.path)= item.label
