--- a/src/components/footer/footer.pug
+++ b/src/components/footer/footer.pug
@@ -78,10 +78,16 @@ mixin footer(options = {})
                 +typography({ variant: "body", text: "Бронирование номеров в лучшем отеле 2019 года по версии ассоциации «Отельные взгляды»" })
             .page-footer__col-group
               .page-footer__col
+                .page-footer__title-wrap
+                  +typography({ variant: "h3", text: "Навигация", hasUpper: true })
                 +navMenu(navMenuItems[0])
               .page-footer__col
+                .page-footer__title-wrap
+                  +typography({ variant: "h3", text: "О нас", hasUpper: true })
                 +navMenu(navMenuItems[1])
               .page-footer__col
+                .page-footer__title-wrap
+                  +typography({ variant: "h3", text: "Служба поддержки", hasUpper: true })
                 +navMenu(navMenuItems[2])
               section(class="page-footer__col  page-footer__col_large")
                 .page-footer__title-wrap
