подключил ui-kit-logo

--- a/src/pages/colors-and-type/colors-and-type.scss
+++ b/src/pages/colors-and-type/colors-and-type.scss
@@ -1,6 +1,7 @@
 @import '../../style/utils/variables.scss';
 @import '../../components/typography/typography.scss';
 @import '../../components/color-pallete/color-pallete.scss';
+@import '../../components/ui-kit-logo/ui-kit-logo.scss';
 
 .colors-and-type__wrap {
   padding-top: 67px;
