--- a/src/layout/ui-kit.pug
+++ b/src/layout/ui-kit.pug
@@ -1,3 +1,4 @@
+include ../components/ui-kit-logo/ui-kit-logo
 block variables
 
 <!DOCTYPE html>
@@ -17,4 +18,5 @@ html(lang="ru")
     link(rel="mask-icon" href="favicons/safari-pinned-tab.svg" color="#5bbad5")
     title #{title}
   body(class=pageClass)
+    +uiKitLogo()
     block content
