--- a/src/pages/form-elements/form-elements.scss
+++ b/src/pages/form-elements/form-elements.scss
@@ -3,6 +3,7 @@
 @import '../../components/input/input.scss';
 @import '../../components/typography/typography.scss';
 @import '../../components/drop-down/drop-down.scss';
+@import '../../components/checkbox/checkbox.scss';
 
 .form-elements__wrap {
   padding-top: 65px;
