--- a/src/pages/form-elements/form-elements.scss
+++ b/src/pages/form-elements/form-elements.scss
@@ -4,6 +4,7 @@
 @import '../../components/typography/typography.scss';
 @import '../../components/drop-down/drop-down.scss';
 @import '../../components/checkbox/checkbox.scss';
+@import '../../components/radiobtn/radiobtn.scss';
 
 .form-elements__wrap {
   padding-top: 65px;
