--- a/src/pages/form-elements/form-elements.scss
+++ b/src/pages/form-elements/form-elements.scss
@@ -5,6 +5,7 @@
 @import '../../components/drop-down/drop-down.scss';
 @import '../../components/checkbox/checkbox.scss';
 @import '../../components/radiobtn/radiobtn.scss';
+@import '../../components/toggle/toggle.scss';
 
 .form-elements__wrap {
   padding-top: 65px;
