--- a/src/pages/form-elements/form-elements.scss
+++ b/src/pages/form-elements/form-elements.scss
@@ -6,6 +6,7 @@
 @import '../../components/checkbox/checkbox.scss';
 @import '../../components/radiobtn/radiobtn.scss';
 @import '../../components/toggle/toggle.scss';
+@import '../../components/likebtn/likebtn.scss';
 
 .form-elements__wrap {
   padding-top: 65px;
