--- a/src/pages/form-elements/form-elements.pug
+++ b/src/pages/form-elements/form-elements.pug
@@ -6,6 +6,7 @@ include ../../components/checkbox/checkbox
 include ../../components/radiobtn/radiobtn
 include ../../components/toggle/toggle
 include ../../components/likebtn/likebtn
+include ../../components/ratebtn/ratebtn
 
 block variables
   -
@@ -92,3 +93,9 @@ block content
             .form-elements__like-btn
               +likebtn({ count: 2 })
             +likebtn({ count: 12, isActived: true })
+          .form-elements__control
+            div(class="form-elements__title-wrap form-elements__title-wrap_button-gap")
+              +typography({ text: "Rate button", variant: "h3", hasUpper: true })
+            .form-elemets__rate-btn
+              +ratebtn({ currentRating: 5, ratingLength: 5 })
+            +ratebtn({ currentRating: 4, ratingLength: 5 })  
