--- a/src/pages/form-elements/form-elements.scss
+++ b/src/pages/form-elements/form-elements.scss
@@ -7,6 +7,7 @@
 @import '../../components/radiobtn/radiobtn.scss';
 @import '../../components/toggle/toggle.scss';
 @import '../../components/likebtn/likebtn.scss';
+@import '../../components/ratebtn/ratebtn.scss';
 
 .form-elements__wrap {
   padding-top: 65px;
