--- a/src/pages/form-elements/form-elements.scss
+++ b/src/pages/form-elements/form-elements.scss
@@ -13,6 +13,32 @@
   padding-top: 65px;
 }
 
+.form-elements__row {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.form-elements__title-wrap {
+  margin-bottom: 5px;
+  display: flex;
+  justify-content: space-between;
+
+  &_button-gap {
+    margin-bottom: 16px;
+  }
+}
+
+.form-elements__title-alt {
+  margin: 0;
+  padding: 0;
+  font-family: Montserrat, Quicksand, Arial, sans-serif;
+  font-size: 12px;
+  font-weight: normal;
+  text-transform: uppercase;
+  color: transparentize($contentColor, .5);
+}
+
 .form-elements__inputs {
   width: 27.6%;
 }
@@ -47,22 +73,32 @@
   }
 }
 
-.form-elements__title-wrap {
-  margin-bottom: 5px;
-  display: flex;
-  justify-content: space-between;
-
-  &_button-gap {
-    margin-bottom: 16px;
-  }
+.form-elements__controls {
+  width: 22.9%;
 }
 
-.form-elements__title-alt {
-  margin: 0;
-  padding: 0;
-  font-family: Montserrat, Quicksand, Arial, sans-serif;
-  font-size: 12px;
-  font-weight: normal;
-  text-transform: uppercase;
-  color: transparentize($contentColor, .5);
+.form-elements__control {
+  margin-bottom: 40px;
+}
+
+.form-elements__toggle {
+  margin-bottom: 10px;
+}
+
+.form-elements__like-wrap {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.form-elements__like-btn {
+  margin-right: 10px;
+}
+
+.form-elements__rate-btn-wrap {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.form-elements__rate-btn {
+  margin-right: 20px;
 }
