--- a/src/components/typography/typography.scss
+++ b/src/components/typography/typography.scss
@@ -3,8 +3,7 @@
 
   &_variant {
     &_h1,
-    &_h2,
-    &_h3 {
+    &_h2 {
       font-family: Quicksand, Montserrat, Arial, sans-serif;
       font-weight: bold;
     }
@@ -20,6 +19,7 @@
     }
 
     &_h3 {
+      font-family: Montserrat, Quicksand, Arial, sans-serif;
       font-size: 12px;
       line-height: 15px;
     }
