--- a/src/pages/form-elements/form-elements.scss
+++ b/src/pages/form-elements/form-elements.scss
@@ -8,6 +8,7 @@
 @import '../../components/toggle/toggle.scss';
 @import '../../components/likebtn/likebtn.scss';
 @import '../../components/ratebtn/ratebtn.scss';
+@import '../../components/range-slider/range-slider.scss';
 
 .form-elements__wrap {
   padding-top: 65px;
@@ -101,4 +102,13 @@
 
 .form-elements__rate-btn {
   margin-right: 20px;
+}
+
+.form-elements__buttons {
+  width: 27.7%;
+}
+
+.form-elements__range-slider-wrap {
+  margin-bottom: 42px;
+  width: 82.8%;
 }
